# BinPacking3DM2

./: .gitignore  CMakeLists.txt  Makefile  README.txt.txt  main.c
Include/: Branch.h  CH3D.h  Car.h  Cars.h  Dir3D.h  MorceauParcours.h  MorceauParcoursLigne.h  MorceauParcoursVirage.h  Object3D.h  Pos3D.h  RT3D.h  TG3D.h  TR3D.h  Tree.h  Wheel.h
Include/2D/: Algorithm.h  ArbreBinaire.h  CSVReader.h  Composant.h  Conteneur.h  Debug.h  Position2D.h  Rectangle.h
Include/3D/: Algorithm3D.h  ArbreBinaire3D.h  CSVOutputWriter3D.h  CSVReader3D.h  Composant3D.h  Conteneur3D.h  Debug.h  Position3D.h
Include/Modules/: ModuleAxes.cpp  ModuleAxes.h  ModuleCouleurs.cpp  ModuleCouleurs.h  ModuleCubes.cpp  ModuleCubes.h  ModuleCylindres.cpp  ModuleCylindres.h  ModuleDessinArc.cpp  ModuleDessinArc.h  ModuleFleche.cpp  ModuleFleche.h  ModuleFont.cpp  ModuleFont.h  ModuleGLSL.cpp  ModuleGLSL.h  ModuleManipulateur.cpp  ModuleManipulateur.h  ModuleMatriceVecteur.cpp  ModuleMatriceVecteur.h  ModuleMatriceVecteurDouble.cpp  ModuleMenus.cpp  (+6 more)
Lib/: mxnet_static.lib
Projet/: Projets.sln
Src/: Branch.cpp  CH3D.cpp  Car.cpp  Cars.cpp  Dir3D.cpp  Exemple.cpp  MorceauParcours.cpp  MorceauParcoursLigne.cpp  MorceauParcoursVirage.cpp  Object3D.cpp  Pos3D.cpp  RT3D.cpp  RT3D.h  TG3D.cpp  TG3D.h  TR3D.cpp  Tree.cpp  Wheel.cpp  main.cpp  test2DBinPacking.csv  test2DBinPackingConteneur.csv  test3DBinPacking.csv  test3DBinPackingComposant.csv
TestMXNet/: test.cpp  test.sln  test.vcxproj  test.vcxproj.filters
nbproject/: configurations.xml  project.properties  project.xml
src/: main.cpp
(+113 files in other folders)
